XWIKI-5736: Horizontal scrollbar always visible in the WYSIWYG editor on small screens Fixed. Merged from trunk@r33164
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/branches/xwiki-web-2.6@33165 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/xwiki-gwt-wysiwyg-client/src/main/resources/org/xwiki/gwt/wysiwyg/public/stylesheets/RichTextArea.css
+++ b/xwiki-platform-web/xwiki-gwt-wysiwyg-client/src/main/resources/org/xwiki/gwt/wysiwyg/public/stylesheets/RichTextArea.css
@@ -32,8 +32,8 @@ body.main {
   float: left;
   height: auto;
   margin: 0;
-  min-height: 100%; 
-  min-width: 100%;
+  min-height: 100% !important;
+  min-width: 100% !important;
   overflow: visible;
   padding: 0;
   position: static;
